--- a/Frontend/index_ngo.html
+++ b/Frontend/index_ngo.html
@@ -49,11 +49,20 @@
           <li class="nav-item"><a href="food_transations_ngo.html" class="nav-link">Donations</a></li>
           <li class="nav-item"><a href="accepted_donations_ngo.html" class="nav-link">Accepted Donations</a></li>
           <li class="nav-item"><a href="donations_history_ngo.html" class="nav-link">Donations History</a></li>
-          <li class="nav-item">
-            <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              <i class="icon-user"></i>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
+              <a class="dropdown-item" href="#">View Profile</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="index.html" id="logoutLinkNavbar">Logout</a>
+            </div>
           </li>
         </ul>
       </div>
+
     </div>
   </nav>
   <!-- END nav -->
@@ -395,7 +404,7 @@
     </svg></div>
 
   <script>
-    document.getElementById('logoutLink').addEventListener('click', function (event) {
+    document.getElementById('logoutLinkNavbar').addEventListener('click', function (event) {
       event.preventDefault(); // Prevent the default link action
       var confirmation = confirm('Are you sure you want to logout?');
       if (confirmation) {
