NGO - incoming,accepted and history

--- a/Frontend/about_ngo.html
+++ b/Frontend/about_ngo.html
@@ -46,11 +46,27 @@
           <li class="nav-item"><a href="gallery_ngo.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="contact_ngo.html" class="nav-link">Contact</a></li>
           <li class="nav-item"><a href="ngolist_ngo.html" class="nav-link">NGO</a></li>
-          <li class="nav-item"><a href="food_transations_ngo.html" class="nav-link">Donations</a></li>
-          <li class="nav-item"><a href="accepted_donations_ngo.html" class="nav-link">Accepted Donations</a></li>
-          <li class="nav-item"><a href="donations_history_ngo.html" class="nav-link">Donations History</a></li>
-          <li class="nav-item">
-            <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Donations
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="food_transations_ngo.html">Incoming Donations</a></li>
+              <li><a class="dropdown-item" href="accepted_donations_ngo.html">Accepted Donations</a></li>
+              <li><a class="dropdown-item" href="donations_history_ngo.html">Donations History</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              <i class="icon-user"></i>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
+              <a class="dropdown-item" href="#">View Profile</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="index.html" id="logoutLinkNavbar">Logout</a>
+            </div>
           </li>
         </ul>
       </div>
