--- a/Frontend/index_ngo.html
+++ b/Frontend/index_ngo.html
@@ -46,9 +46,17 @@
           <li class="nav-item"><a href="gallery_ngo.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="contact_ngo.html" class="nav-link">Contact</a></li>
           <li class="nav-item"><a href="ngolist_ngo.html" class="nav-link">NGO</a></li>
-          <li class="nav-item"><a href="food_transations_ngo.html" class="nav-link">Donations</a></li>
-          <li class="nav-item"><a href="accepted_donations_ngo.html" class="nav-link">Accepted Donations</a></li>
-          <li class="nav-item"><a href="donations_history_ngo.html" class="nav-link">Donations History</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Donations
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="food_transations_ngo.html">Incoming Donations</a></li>
+              <li><a class="dropdown-item" href="accepted_donations_ngo.html">Accepted Donations</a></li>
+              <li><a class="dropdown-item" href="donations_history_ngo.html">Donations History</a></li>
+            </ul>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
@@ -76,9 +84,6 @@
             Option of Our Life</h1>
           <p class="mb-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Created by Two Responsible
             Person</p>
-
-          <button type="button" onclick="scrollToSection()" class="btn btn-outline-dark btn-lg"
-            style="border: none; border-radius: 5px; color: white;">Partner with Us</button>
         </div>
       </div>
     </div>
