--- a/Frontend/donations_history_ngo.html
+++ b/Frontend/donations_history_ngo.html
@@ -72,6 +72,11 @@
             margin-right: 10px;
             /* Space between photos */
         }
+
+        .bold-label {
+            font-weight: 700;
+            /* Bolder than normal bold */
+        }
     </style>
 </head>
 
@@ -92,13 +97,27 @@
                     <li class="nav-item"><a href="gallery_ngo.html" class="nav-link">Gallery</a></li>
                     <li class="nav-item"><a href="contact_ngo.html" class="nav-link">Contact</a></li>
                     <li class="nav-item"><a href="ngolist_ngo.html" class="nav-link">NGO</a></li>
-                    <li class="nav-item"><a href="food_transations_ngo.html" class="nav-link">Donations</a></li>
-                    <li class="nav-item"><a href="accepted_donations_ngo.html" class="nav-link">Accepted Donations</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Donations
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="food_transations_ngo.html">Incoming Donations</a></li>
+                            <li><a class="dropdown-item" href="accepted_donations_ngo.html">Accepted Donations</a></li>
+                            <li><a class="dropdown-item" href="donations_history_ngo.html">Donations History</a></li>
+                        </ul>
                     </li>
-                    <li class="nav-item active"><a href="donations_history_ngo.html" class="nav-link">History</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="icon-user"></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
+                            <a class="dropdown-item" href="#">View Profile</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="index.html" id="logoutLinkNavbar">Logout</a>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -107,21 +126,88 @@
     <!-- END nav -->
 
     <div id="foodTransactionsContainer" class="container" style="margin-top: 6rem">
-        <!-- Food transactions will be dynamically inserted here -->
+        <!-- Static entry for food transactions -->
+        <div class="card mb-4">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h5 class="card-title">Food: Rice, Bread, Vegetables</h5>
+                        <p class="card-text">Quantity: 10 kg</p>
+                        <p class="card-text">Category: Perishable</p>
+                        <p class="card-text">Packaged: Yes</p>
+                        <p class="card-text">Pickup Address: 123 Main Street, Cityville</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="card-text">Latitude: 34.0522</p>
+                        <p class="card-text">Longitude: -118.2437</p>
+                        <p class="card-text">Contact Person: John Doe</p>
+                        <p class="card-text">Contact Phone: 123-456-7890</p>
+                        <p class="card-text">Donor: Jane Smith</p>
+                        <p class="card-text">Additional Notes: Please call before pickup.</p>
+                    </div>
+                </div>
+                <div class="text-center mt-3">
+                    <button class="btn btn-success btn-accept" onclick="showAcceptForm()">Form</button>
+                    <button class="btn btn-primary btn-view-photos ml-2"
+                        onclick="showPhotos(['photo1.jpg', 'photo2.jpg'])">View Photos</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="acceptFormModal" tabindex="-1" role="dialog" aria-labelledby="acceptFormModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content" style="padding: 0px;">
+                <div class="modal-header" style="justify-content: center;">
+                    <h5 class="modal-title" id="acceptFormModalLabel">Form</h5>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="description" class="bold-label"><strong>Description</strong></label>
+                        <p id="description">This is a description of the distribution.</p>
+                    </div>
+                    <div class="form-group">
+                        <label for="peopleServed" class="bold-label"><strong>People Served</strong></label>
+                        <p id="peopleServed">100</p>
+                    </div>
+                    <div class="form-group">
+                        <label for="phone_numbers" class="bold-label"><strong>Volunteer Phone Numbers</strong></label>
+                        <p id="phone_numbers">123-456-7890, 098-765-4321</p>
+                    </div>
+                    <div class="form-group">
+                        <label for="ratings" class="bold-label"><strong>Ratings</strong></label>
+                        <p id="ratings">⭐⭐⭐⭐</p>
+                    </div>
+                    <div class="form-group">
+                        <label for="reviewNotes" class="bold-label"><strong>Review Notes</strong></label>
+                        <p id="reviewNotes">These are review notes.</p>
+                    </div>
+                </div>
+                <div class="modal-footer" style="justify-content: center;">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Photo Modal -->
     <div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-            <div class="modal-content" style="align-items: center;">
-                <div class="modal-header">
+            <div class="modal-content">
+                <div class="modal-header" style="justify-content: center;">
                     <h5 class="modal-title" id="photoModalLabel">Photos</h5>
                 </div>
                 <div class="modal-body">
                     <div class="photo-container">
                         <div class="photo-tile">
-                            <!-- Photos will be dynamically inserted here -->
+                            <img src="images/image_1.jpg" alt="Photo 1" class="tile-photo">
+                            <img src="images/image_3.jpg" alt="Photo 1" class="tile-photo">
+                            <img src="images/image_2.jpg" alt="Photo 1" class="tile-photo">
+                            <img src="images/image_5.jpg" alt="Photo 1" class="tile-photo">
+                            <img src="images/image_4.jpg" alt="Photo 1" class="tile-photo">
                         </div>
                     </div>
                     <div class="text-center mt-3">
@@ -129,7 +215,7 @@
                         <button type="button" class="btn btn-secondary btn-next-photo ml-2">Next</button>
                     </div>
                 </div>
-                <div class="modal-footer">
+                <div class="modal-footer" style="justify-content: center;">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -139,105 +225,50 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
-        const BACKEND_URL = "http://localhost:3000";
-
-        async function fetchFoodTransactions() {
-            try {
-                const token = localStorage.getItem('authToken');
-                const response = await fetch(`${BACKEND_URL}/foodtransaction/foodlogs`, {
-                    method: "GET",
-                    headers: {
-                        'Authorization': token
-                    }
-                });
-
-                if (!response.ok) {
-                    throw new Error('Failed to fetch available food transactions');
-                }
-
-                const data = await response.json();
-                createDonationCards(data);
-            } catch (error) {
-                console.error('Error fetching food transactions:', error);
-            }
+        function showAcceptForm() {
+            $('#acceptFormModal').modal('show');
         }
+    </script>
+    <script>
+        // View Photos button click event
+        document.querySelector('.btn-view-photos').addEventListener('click', function () {
+            $('#photoModal').modal('show');
+        });
+    </script>
 
-        function createDonationCards(donations) {
-            const container = document.getElementById('foodTransactionsContainer');
-            container.innerHTML = '';
-
-            donations.forEach(donation => {
-                const card = document.createElement('div');
-                card.className = 'card mb-4';
-                card.innerHTML = `
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h5 class="card-title">Food: ${donation.foodItems.join(', ')}</h5>
-                            <p class="card-text">Quantity: ${donation.quantity}</p>
-                            <p class="card-text">Category: ${donation.foodtype}</p>
-                            <p class="card-text">Packaged: ${donation.packaged ? 'Yes' : 'No'}</p>
-                            <p class="card-text">Pickup Address: ${donation.pickupLocation.address.address_line_1}, ${donation.pickupLocation.address.city}</p>
-                        </div>
-                        <div class="col-md-6">
-                            <p class="card-text">Latitude: ${donation.pickupLocation.geo_location.latitude}</p>
-                            <p class="card-text">Longitude: ${donation.pickupLocation.geo_location.longitude}</p>
-                            <p class="card-text">Contact Person: ${donation.contactPerson.name}</p>
-                            <p class="card-text">Contact Phone: ${donation.contactPerson.phone}</p>
-                            <p class="card-text">Donor: ${donation.donor.name}</p>
-                            <p class="card-text">Additional Notes: ${donation.additionalNotes || 'None'}</p>
-                        </div>
-                    </div>
-                    <div class="text-center mt-3">
-                        <button class="btn btn-primary btn-view-photos ml-2" onclick="showPhotos(${JSON.stringify(donation.distribution_photos).replace(/"/g, '&quot;')})">View Photos</button>
-                    </div>
-                </div>
-            `;
-                container.appendChild(card);
-            });
-        }
-
-        function showPhotos(photos) {
-            const photoContainer = document.querySelector('.photo-tile');
-            photoContainer.innerHTML = ''; // Clear previous photos
-
-            photos.forEach((photo, index) => {
-                console.log(`Loading photo: ${photo}`); // Debugging line to check photo paths
-                const img = document.createElement('img');
-                img.src = photo;
-                img.alt = `Photo ${index + 1}`;
-                img.className = 'tile-photo';
-                img.style.display = index === 0 ? 'block' : 'none'; // Show first photo initially
-                photoContainer.appendChild(img);
-            });
-
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // Variables to track current photo index and total number of photos
             let currentPhotoIndex = 0;
+            const photos = document.querySelectorAll('.tile-photo');
             const numPhotos = photos.length;
 
+            // Function to update displayed photo
             function updateDisplayedPhoto() {
-                const photos = document.querySelectorAll('.tile-photo');
                 photos.forEach(photo => {
                     photo.style.display = 'none'; // Hide all photos
                 });
                 photos[currentPhotoIndex].style.display = 'block'; // Show current photo
             }
 
-            document.querySelector('.btn-next-photo').onclick = function () {
+            // Next photo button click handler
+            document.querySelector('.btn-next-photo').addEventListener('click', function () {
                 currentPhotoIndex = (currentPhotoIndex + 1) % numPhotos; // Increment index
                 updateDisplayedPhoto(); // Update displayed photo
-            };
+            });
 
-            document.querySelector('.btn-previous-photo').onclick = function () {
+            // Previous photo button click handler
+            document.querySelector('.btn-previous-photo').addEventListener('click', function () {
                 currentPhotoIndex = (currentPhotoIndex - 1 + numPhotos) % numPhotos; // Decrement index
                 updateDisplayedPhoto(); // Update displayed photo
-            };
+            });
 
-            $('#photoModal').modal('show');
-        }
+            // Initial setup
+            updateDisplayedPhoto(); // Show initial photo
+        });
 
-        document.addEventListener('DOMContentLoaded', fetchFoodTransactions);
+
     </script>
-
     <footer class="ftco-footer ftco-section img">
         <div class="overlay"></div>
         <div class="container">
