--- a/Frontend/donations_history_ngo.html
+++ b/Frontend/donations_history_ngo.html
@@ -293,6 +293,7 @@
                             <li class="nav-item"><a href="gallery_ngo.html" class="nav-link">Gallery</a></li>
                             <li class="nav-item"><a href="contact_ngo.html" class="nav-link">Contact</a></li>
                             <li class="nav-item"><a href="ngolist_ngo.html" class="nav-link">NGO</a></li>
+                            <li class="nav-item"><a href="volunteer_find.html" class="nav-link">Volunteers</a></li>
                             <li class="nav-item active"><a href="food_transations_ngo.html"
                                     class="nav-link">Donations</a></li>
                             <li class="nav-item"><a href="accepted_donations_ngo.html" class="nav-link">Accepted
